Change index page's phrases

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ overview: true
       <p>
         <a href="http://daringfireball.net/projects/markdown/">Markdown</a> (または <a href="http://textile.sitemonks.com/">Textile</a>)、
         <a href="http://wiki.shopify.com/Liquid">Liquid</a> や HTML <span class="amp">&amp;</span> CSS が使われます。
-        静的サイトの展開のための準備ができて出てきます。
+        すぐにデプロイできる静的サイトを生成します。
       </p>
       <!--
       <p><a href="http://daringfireball.net/projects/markdown/">Markdown</a> (or <a href="http://textile.sitemonks.com/">Textile</a>), <a href="http://wiki.shopify.com/Liquid">Liquid</a>, HTML <span class="amp">&amp;</span> CSS go in. Static sites come out ready for deployment.</p>
@@ -63,14 +63,14 @@ overview: true
       <h2>Blog-aware</h2>
       -->
       <p>
-        パーマリンク、カテゴリ、ページ、ポスト、そしてカスタムレイアウトはここの全てのファーストクラス市民です。
+        パーマリンク、カテゴリ、ページ、ブログ記事、そしてカスタムレイアウト。これらは全て一級市民です。
       </p>
       <!--
       <p>
         Permalinks, categories, pages, posts, and custom layouts are all first-class citizens here.
       </p>
       -->
-      <a href="/docs/migrations/" class="">あなたのブログの移行 &rarr;</a>
+      <a href="/docs/migrations/" class="">あなたのブログを移行するには &rarr;</a>
       <!--
       <a href="/docs/migrations/" class="">Migrate your blog &rarr;</a>
       -->
@@ -81,7 +81,7 @@ overview: true
 <section class="quickstart">
   <div class="grid">
     <div class="unit golden-small center-on-mobiles">
-      <h4>起動から実行まで<em>数秒</em>です。</h4>
+      <h4>起動から実行まで<em>一瞬</em>です。</h4>
       <!--
       <h4>Get up and running <em>in&nbsp;seconds</em>.</h4>
       -->
@@ -132,14 +132,14 @@ overview: true
             <h2 class="center-on-mobiles"><strong>Free hosting</strong> with GitHub Pages</h2>
             -->
             <p>
-              ホスティング会社との取引にうんざりしていますか？
-              <a href="http://pages.github.com/">GitHub Pages</a> は <em>Jekyll で動いているので</em>、
-              あなたは GitHub を自由に — <a href="https://help.github.com/articles/setting-up-a-custom-domain-with-pages">カスタムドメイン名</a>や全て
-              を使って簡単にサイトをデプロイすることができます。
+              ホスティング会社との取引にうんざりしていませんか？
+              <a href="http://pages.github.com/">GitHub Pages</a> は <em>Jekyll で動いています</em>。
+              だから、あなたも自分のサイトを簡単に GitHub にデプロイできます。
+              しかも、 <a href="https://help.github.com/articles/setting-up-a-custom-domain-with-pages">カスタムドメイン名</a>を含む全てが無料です。
             <!--
             <p>Sick of dealing with hosting companies? <a href="http://pages.github.com/">GitHub Pages</a> are <em>powered by Jekyll</em>, so you can easily deploy your site using GitHub for free&mdash;<a href="https://help.github.com/articles/setting-up-a-custom-domain-with-pages">custom domain name</a> and&nbsp;all.</p>
             -->
-            <a href="http://pages.github.com/" class="">GitHub Pages の詳細情報 &rarr;</a>
+            <a href="http://pages.github.com/" class="">GitHub Pages についてもっと知る &rarr;</a>
             <!--
             <a href="http://pages.github.com/" class="">Learn more about GitHub Pages &rarr;</a>
             -->
