gh-pagesのindex.htmlにのみ記載していた注釈をすくい上げる

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@ overview: true
 </section>
 <section class="features">
   <div class="grid">
+    <p>※ このページは本家プロジェクト <a href="https://github.com/jekyll/jekyll/tree/5daf987c8bb82088503f28efeba198cda722e59a">5daf987</a> 時点のドキュメントを翻訳しています。最新内容を知りたい場合は <a href="http://jekyllrb.com/">jekyllrb.com</a> を参照してください。翻訳に関する issue や pull request は本家ではなく <a href="https://github.com/gosyujin/jekyllrb.com.jp">jekyllrb.com.jp</a> へお願いします。</p>
+  </div>
+  </section>
+  <section class="features">
+    <div class="grid">
     <div class="unit one-third">
       <h2>シンプル</h2>
       <!--
