index.htmlの更新をマージ

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@ overview: true
         No more databases, comment moderation, or pesky updates to install—just <em>your content</em>.
       </p>
       -->
-      <a href="/docs/usage/" class="">基本的な使い方 &rarr;</a>
+      <a href="/docs/usage/">基本的な使い方 &rarr;</a>
       <!--
-      <a href="/docs/usage/" class="">How Jekyll works &rarr;</a>
+      <a href="/docs/usage/">How Jekyll works &rarr;</a>
       -->
     </div>
     <div class="unit one-third">
@@ -56,6 +56,8 @@ overview: true
       <!--
       <a href="/docs/templates/" class="">Jekyll template guide &rarr;</a>
       -->
+      <p><a href="http://daringfireball.net/projects/markdown/">Markdown</a> (or <a href="http://redcloth.org/textile">Textile</a>), <a href="http://wiki.shopify.com/Liquid">Liquid</a>, HTML <span class="amp">&amp;</span> CS
+      <a href="/docs/templates/">Jekyll template guide &rarr;</a>
     </div>
     <div class="unit one-third">
       <h2>Blog のような</h2>
@@ -70,9 +72,9 @@ overview: true
         Permalinks, categories, pages, posts, and custom layouts are all first-class citizens here.
       </p>
       -->
-      <a href="/docs/migrations/" class="">あなたのブログを移行するには &rarr;</a>
+      <a href="/docs/migrations/">あなたのブログを移行するには &rarr;</a>
       <!--
-      <a href="/docs/migrations/" class="">Migrate your blog &rarr;</a>
+      <a href="/docs/migrations/">Migrate your blog &rarr;</a>
       -->
     </div>
     <div class="clear"></div>
@@ -125,7 +127,7 @@ overview: true
     <div class="unit whole">
       <div class="grid pane">
         <div class="unit whole center-on-mobiles">
-          <img src="img/octojekyll.png" alt="Free Jekyll hosting on GitHub Pages">
+          <img src="img/octojekyll.png" width="300" height="251" alt="Free Jekyll hosting on GitHub Pages">
           <div class="pane-content">
             <h2 class="center-on-mobiles">GitHub Pages の<strong>無料ホスティング</strong></h2>
             <!--
@@ -139,9 +141,9 @@ overview: true
             <!--
             <p>Sick of dealing with hosting companies? <a href="http://pages.github.com/">GitHub Pages</a> are <em>powered by Jekyll</em>, so you can easily deploy your site using GitHub for free&mdash;<a href="https://help.github.com/articles/setting-up-a-custom-domain-with-pages">custom domain name</a> and&nbsp;all.</p>
             -->
-            <a href="http://pages.github.com/" class="">GitHub Pages についてもっと知る &rarr;</a>
+            <a href="http://pages.github.com/">GitHub Pages についてもっと知る &rarr;</a>
             <!--
-            <a href="http://pages.github.com/" class="">Learn more about GitHub Pages &rarr;</a>
+            <a href="http://pages.github.com/">Learn more about GitHub Pages &rarr;</a>
             -->
           </div>
         </div>
