--- a/pages/404.html
+++ b/pages/404.html
@@ -7,7 +7,8 @@ sitemap: false
 <section class="intro">
   <div class="grid">
     <div class="unit whole align-center">
-      <p class="first">Huh. It seems that page is<br/>Hyde-ing...</p>
+      <p class="first">あぁ。このページはきっと<br/>隠れているんだ...</p>
+      <!-- <p class="first">Huh. It seems that page is<br/>Hyde-ing...</p> -->
     </div>
   </div>
 </section>
@@ -15,7 +16,8 @@ sitemap: false
 <section class="error">
   <div class="grid">
     <div class="unit whole align-center">
-      <p>The resource you requested was not found. Here are some links to help you find your way:</p>
+      <p>要求されたリソースは見つかりませんでした。<br />ここに、あなたが知りたいことを見つける手助けとなるリンクがあります：</p>
+      <!-- <p>The resource you requested was not found. Here are some links to help you find your way:</p> -->
       <nav class="main-nav">
         <ul>
           <li>
