--- a/pages/index.html
+++ b/pages/index.html
@@ -7,30 +7,37 @@ permalink: /
 <section class="intro">
   <div class="grid">
     <div class="unit whole center-on-mobiles">
-      <p class="first">Transform your plain text into static&nbsp;websites and&nbsp;blogs.</p>
+      <p class="first">プレーンテキストを静的サイトやブログに変えましょう。<!--Transform your plain text into static&nbsp;websites and&nbsp;blogs.--></p>
     </div>
   </div>
 </section>
 <section class="features">
   <div class="grid">
+    <p>※ Jekyllの最新内容を知りたい場合は 本家サイト(<a href="http://jekyllrb.com/">jekyllrb.com</a>) を参照してください。翻訳に関する質問/要望は本家ではなく <a href="https://github.com/jekyllrb-ja/jekyllrb-ja.github.io/issues">jekyllrb-jaのIssues</a> へお願いします。</p>
+  </div>
+  </section>
+<section class="features">
+  <div class="grid">
     <div class="unit one-third">
-      <h2>Simple</h2>
+      <h2>シンプル<!--Simple--></h2>
       <p>
-        No more databases, comment moderation, or pesky updates to install—just <em>your content</em>.
+        データベース、コメント管理それに面倒なアップデートはもう必要ありません。—<em>コンテンツに集中</em>できます。<!-- No more databases, comment moderation, or pesky updates to install—just <em>your content</em>. -->
       </p>
-      <a href="/docs/usage/">How Jekyll works &rarr;</a>
+      <a href="{{ "/docs/usage/" | relative_url }}">Jekyllの使い方<!--How Jekyll works--> &rarr;</a>
     </div>
     <div class="unit one-third">
-      <h2>Static</h2>
-      <p><a href="https://daringfireball.net/projects/markdown/">Markdown</a>, <a href="https://github.com/Shopify/liquid/wiki">Liquid</a>, HTML <span class="amp">&amp;</span> CSS go in. Static sites come out ready for deployment.</p>
-      <a href="/docs/templates/">Jekyll template guide &rarr;</a>
+      <h2>静的<!--Static--></h2>
+      <p><a href="https://daringfireball.net/projects/markdown/">Markdown</a>、<a href="https://github.com/Shopify/liquid/wiki">Liquid</a>、HTML <span class="amp">&amp;</span> CSSを使用します。 静的サイトを利用する準備はできています。</p>
+      <!-- <p><a href="https://daringfireball.net/projects/markdown/">Markdown</a>, <a href="https://github.com/Shopify/liquid/wiki">Liquid</a>, HTML <span class="amp">&amp;</span> CSS go in. Static sites come out ready for deployment.</p> -->
+      <a href="{{ "/docs/templates/" | relative_url }}">Jekyll テンプレートガイド<!--Jekyll template guide--> &rarr;</a>
     </div>
     <div class="unit one-third">
-      <h2>Blog-aware</h2>
+      <h2>ブログのような<!--Blog-aware--></h2>
       <p>
-        Permalinks, categories, pages, posts, and custom layouts are all first-class citizens here.
+        パーマリンク、カテゴリ、ページ、ポストそれにカスタムレイアウト、これらはすべて一流です。
+        <!-- Permalinks, categories, pages, posts, and custom layouts are all first-class citizens here. -->
       </p>
-      <a href="http://import.jekyllrb.com">Migrate your blog &rarr;</a>
+      <a href="http://import.jekyllrb.com" target="_blank">ブログの移行<!--Migrate your blog--> &rarr;</a>
     </div>
     <div class="clear"></div>
   </div>
@@ -38,10 +45,11 @@ permalink: /
 <section class="quickstart">
   <div class="grid">
     <div class="unit golden-small center-on-mobiles">
-      <h3>Get up and running <em>in&nbsp;seconds</em>.</h3>
+      <h3>入手してから動かすまで、<br /><em>ほんの少し</em>です。</h3>
+      <!-- <h3>Get up and running <em>in&nbsp;seconds</em>.</h3> -->
     </div>
     <div class="unit golden-large code">
-      <p class="title">Quick-start Instructions</p>
+      <p class="title">クイックスタート<!--Quick-start Instructions--></p>
       <div class="shell">
         <p class="line">
           <span class="path">~</span>
@@ -64,7 +72,8 @@ permalink: /
           <span class="command">bundle exec jekyll serve</span>
         </p>
         <p class="line">
-          <span class="output"># => Now browse to http://localhost:4000</span>
+          <span class="output"># => http://localhost:4000をブラウザで見てください</span>
+          <!-- <span class="output"># => Now browse to http://localhost:4000</span> -->
         </p>
       </div>
     </div>
@@ -78,9 +87,12 @@ permalink: /
         <div class="unit whole center-on-mobiles">
           <img src="img/octojekyll.png" width="300" height="251" alt="Free Jekyll hosting on GitHub Pages">
           <div class="pane-content">
-            <h2 class="center-on-mobiles"><strong>Free hosting</strong> with GitHub Pages</h2>
-            <p>Sick of dealing with hosting companies? <a href="https://pages.github.com/">GitHub Pages</a> are <em>powered by Jekyll</em>, so you can easily deploy your site using GitHub for free&mdash;<a href="https://help.github.com/articles/about-supported-custom-domains/">custom domain name</a> and&nbsp;all.</p>
-            <a href="https://pages.github.com/">Learn more about GitHub Pages &rarr;</a>
+            <h2 class="center-on-mobiles"><strong>無料のホスティング</strong>GitHub Pages</h2>
+            <!-- <h2 class="center-on-mobiles"><strong>Free hosting</strong> with GitHub Pages</h2> -->
+            <p>ホスティング会社との取引は面倒ではありませんか？ <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>は<em>Jekyllで動いています</em>ので、 GitHubで簡単にあなたのサイトをデプロイすることができます。 &mdash;<a href="https://help.github.com/articles/about-supported-custom-domains/" target="_blank">カスタムドメインの使用</a>など全てが無料です。</p>
+            <!-- <p>Sick of dealing with hosting companies? <a href="https://pages.github.com/">GitHub Pages</a> are <em>powered by Jekyll</em>, so you can easily deploy your site using GitHub for free&mdash;<a href="https://help.github.com/articles/about-supported-custom-domains/">custom domain name</a> and&nbsp;all.</p> -->
+            <a href="https://pages.github.com/" target="_blank">GitHub Pagesについてもっと詳しく &rarr;</a>
+            <!-- <a href="https://pages.github.com/">Learn more about GitHub Pages &rarr;</a> -->
           </div>
         </div>
         <div class="clear"></div>
