--- a/pages/index.html
+++ b/pages/index.html
@@ -13,7 +13,7 @@ permalink: /
 </section>
 <section class="features">
   <div class="grid">
-    <p>※ Jekyllの最新内容を知りたい場合は 本家サイト(<a href="http://jekyllrb.com/">jekyllrb.com</a>) を参照してください。翻訳に関する質問/要望は本家ではなく <a href="https://github.com/jekyllrb-ja/jekyllrb-ja.github.io/issues">jekyllrb-jaのIssues</a> へお願いします。</p>
+    <p>※ Jekyllの最新内容を知りたい場合は 本家サイト(<a href="https://jekyllrb.com/">jekyllrb.com</a>) を参照してください。翻訳に関する質問/要望は本家ではなく <a href="https://github.com/jekyllrb-ja/jekyllrb-ja.github.io/issues">jekyllrb-jaのIssues</a> へお願いします。</p>
   </div>
   </section>
 <section class="features">
