ページへの変更反映200621

--- a/pages/index.html
+++ b/pages/index.html
@@ -23,13 +23,13 @@ permalink: /
       <p>
         データベース、コメント管理それに面倒なアップデートはもう必要ありません。—<em>コンテンツに集中</em>できます。<!-- No more databases, comment moderation, or pesky updates to install—just <em>your content</em>. -->
       </p>
-      <a href="{{ "/docs/usage/" | relative_url }}">Jekyllの使い方<!--How Jekyll works--> &rarr;</a>
+      <a href="{{ 'docs/usage/' | relative_url }}">Jekyllの使い方<!--How Jekyll works--> &rarr;</a>
     </div>
     <div class="unit one-third">
       <h2>静的<!--Static--></h2>
       <p><a href="https://daringfireball.net/projects/markdown/">Markdown</a>、<a href="https://github.com/Shopify/liquid/wiki">Liquid</a>、HTML <span class="amp">&amp;</span> CSSを使用します。 静的サイトを利用する準備はできています。</p>
       <!-- <p><a href="https://daringfireball.net/projects/markdown/">Markdown</a>, <a href="https://github.com/Shopify/liquid/wiki">Liquid</a>, HTML <span class="amp">&amp;</span> CSS go in. Static sites come out ready for deployment.</p> -->
-      <a href="{{ "/docs/templates/" | relative_url }}">Jekyll テンプレートガイド<!--Jekyll template guide--> &rarr;</a>
+      <a href="{{ 'docs/templates/' | relative_url }}">Jekyll テンプレートガイド<!--Jekyll template guide--> &rarr;</a>
     </div>
     <div class="unit one-third">
       <h2>ブログのような<!--Blog-aware--></h2>
@@ -85,7 +85,7 @@ permalink: /
     <div class="unit whole">
       <div class="grid pane">
         <div class="unit whole center-on-mobiles">
-          <img src="img/octojekyll.png" width="300" height="251" alt="Free Jekyll hosting on GitHub Pages">
+          <img src="{{ 'img/octojekyll.png' | relative_url }}" width="300" height="251" alt="Free Jekyll hosting on GitHub Pages">
           <div class="pane-content">
             <h2 class="center-on-mobiles"><strong>無料のホスティング</strong>GitHub Pages</h2>
             <!-- <h2 class="center-on-mobiles"><strong>Free hosting</strong> with GitHub Pages</h2> -->
